# obs-remote-scene-switcher

./: Cargo.toml  README.md  config.example.toml
src/: main.rs
src/obs/: mod.rs
